--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "test": "vitest --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "beauty": "prettier --write .",
+    "preview": "vite preview",
+    "check": "prettier . --check",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "@types/eslint": "^8.56.10",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
@@ -32,14 +39,25 @@
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.38",
     "rollup": "^4.18.0",
     "tailwindcss": "^3.4.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.5",
+    "prettier": "3.3.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0"
+  },
+  "lint-staged": {
+    "*.{js,ts.tsx,jsx,css,scss,html}": [
+      "eslint --fix",
+      "prettier --ignore-unknown --write"
+    ]
   }
 }
