--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "vitest": "^1.6.0"
   },
   "lint-staged": {
-    "*.{js,ts.tsx,jsx,css,scss,html}": [
+    "src/**/*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "prettier --ignore-unknown --write"
+      "prettier --write"
+    ],
+    "src/**/*.{css,scss,html,json,md}": [
+      "prettier --write"
     ]
   }
 }
