feat(login): Implement login

--- a/.hound.yml
+++ b/.hound.yml
@@ -1,7 +1,7 @@
 eslint:
   enabled: true
   file_patterns:
-    - "**/*.{js,jsx,ts,tsx}"
+    - '**/*.{js,jsx,ts,tsx}'
   enabled_plugins:
     - eslint-plugin-react
     - eslint-plugin-prettier
