--- a/.github/workflows/nodejs.js.yml
+++ b/.github/workflows/nodejs.js.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - develop
-      - "*"
+      - '*'
   pull_request:
     branches:
       - develop
-      - "*"
+      - '*'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -17,14 +17,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ["20.x"]
+        node-version: ['20.x']
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
       - name: Run tests
