--- a/package.json
+++ b/package.json
@@ -1,66 +1,71 @@
 {
-  "name": "hackers-ec-fe",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest --coverage",
-    "test:ui": "vitest --ui",
-    "beauty": "prettier --write .",
-    "preview": "vite preview",
-    "check": "prettier . --check",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^16.0.0",
-    "@types/eslint": "^8.56.10",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "autoprefixer": "^10.4.19",
-    "esbuild": "^0.21.5",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "husky": "^8.0.0",
-    "jsdom": "^24.1.0",
-    "lint-staged": "^15.2.5",
-    "postcss": "^8.4.38",
-    "prettier": "3.3.1",
-    "rollup": "^4.18.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vitest": "^1.6.0"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "src/**/*.{css,scss,html,json,md}": [
-      "prettier --write"
-    ]
-  }
+	"name": "hackers-ec-fe",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"test": "vitest --coverage",
+		"test:ui": "vitest --ui",
+		"beauty": "prettier --write .",
+		"preview": "vite preview",
+		"check": "prettier . --check",
+		"prepare": "husky install",
+		"pre-commit": "lint-staged"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.6.0",
+		"@reduxjs/toolkit": "^2.2.5",
+		"axios": "^1.7.2",
+		"lucide-react": "^0.394.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.5",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.23.1",
+		"sonner": "^1.5.0",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/react": "^16.0.0",
+		"@types/eslint": "^8.56.10",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/coverage-v8": "^1.6.0",
+		"@vitest/ui": "^1.6.0",
+		"autoprefixer": "^10.4.19",
+		"esbuild": "^0.21.5",
+		"eslint": "^8.57.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-react": "^7.34.2",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
+		"husky": "^8.0.0",
+		"jsdom": "^24.1.0",
+		"lint-staged": "^15.2.5",
+		"postcss": "^8.4.38",
+		"prettier": "3.3.1",
+		"rollup": "^4.18.0",
+		"tailwindcss": "^3.4.4",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0",
+		"vitest": "^1.6.0"
+	},
+	"lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"src/**/*.{css,scss,html,json,md}": [
+			"prettier --write"
+		]
+	}
 }
