--- a/package.json
+++ b/package.json
@@ -19,13 +19,20 @@
 		"@hookform/resolvers": "^3.6.0",
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.7.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"clx": "^1.0.0",
+		"framer-motion": "^11.2.10",
 		"lucide-react": "^0.394.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
+		"react-icons": "^5.2.1",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
 		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.3.0",
+		"typical": "^7.1.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
