--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"clx": "^1.0.0",
 		"framer-motion": "^11.2.10",
 		"lucide-react": "^0.394.0",
+		"nprogress": "^0.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
@@ -39,8 +40,10 @@
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^16.0.0",
 		"@types/eslint": "^8.56.10",
+		"@types/nprogress": "^0.2.3",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
+		"@types/redux-mock-store": "^1.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-react": "^4.2.1",
@@ -60,6 +63,7 @@
 		"lint-staged": "^15.2.5",
 		"postcss": "^8.4.38",
 		"prettier": "3.3.1",
+		"redux-mock-store": "^1.5.4",
 		"rollup": "^4.18.0",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.2.2",
