--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
 		"pre-commit": "lint-staged"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.4",
 		"@hookform/resolvers": "^3.6.0",
 		"@reduxjs/toolkit": "^2.2.5",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/react-paginate": "^7.1.4",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -30,11 +33,16 @@
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.13",
 		"react-hook-form": "^7.51.5",
 		"react-icons": "^5.2.1",
+		"react-paginate": "^8.2.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
 		"react-spinners": "^0.13.8",
+		"react-table-scroll": "^0.1.2",
+		"redux-thunk": "^3.1.0",
+		"rsuite": "^5.64.1",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
 		"zod": "^3.23.8"
