--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.6.0",
+		"@react-oauth/google": "^0.12.1",
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
@@ -48,6 +49,7 @@
 		"@testing-library/react": "^16.0.0",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint": "^8.56.10",
+		"@types/jwt-decode": "^3.1.0",
 		"@types/nprogress": "^0.2.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.2.22",
