--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@vitest/coverage-v8": "^1.6.0",
 		"@vitest/ui": "^1.6.0",
 		"autoprefixer": "^10.4.19",
+		"axios-mock-adapter": "^1.22.0",
 		"esbuild": "^0.21.5",
 		"eslint": "^8.57.0",
 		"eslint-config-airbnb-base": "^15.0.0",
