--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"clsx": "^2.1.1",
 		"clx": "^1.0.0",
 		"framer-motion": "^11.2.10",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.394.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
 		"react-icons": "^5.2.1",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
+		"react-spinners": "^0.13.8",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
 		"typical": "^7.1.1",
@@ -38,6 +40,7 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint": "^8.56.10",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
