--- a/.github/workflows/nodejs.js.yml
+++ b/.github/workflows/nodejs.js.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
     strategy:
       matrix:
