--- a/package.json
+++ b/package.json
@@ -23,25 +23,31 @@
 		"clsx": "^2.1.1",
 		"clx": "^1.0.0",
 		"framer-motion": "^11.2.10",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.394.0",
 		"nprogress": "^0.2.0",
 		"react": "^18.2.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
 		"react-icons": "^5.2.1",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
+		"react-spinners": "^0.13.8",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
-		"typical": "^7.1.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.4.1",
+		"@mswjs/data": "^0.16.1",
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint": "^8.56.10",
 		"@types/nprogress": "^0.2.3",
-		"@types/react": "^18.2.66",
+		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.2.22",
 		"@types/redux-mock-store": "^1.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -61,6 +67,7 @@
 		"husky": "^8.0.0",
 		"jsdom": "^24.1.0",
 		"lint-staged": "^15.2.5",
+		"msw": "^2.3.1",
 		"postcss": "^8.4.38",
 		"prettier": "3.3.1",
 		"redux-mock-store": "^1.5.4",
