--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.6.0",
 		"@reduxjs/toolkit": "^2.2.5",
+		"@testing-library/user-event": "^14.5.2",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -32,9 +33,12 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
 		"react-icons": "^5.2.1",
+		"react-paginate": "^8.2.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
+		"react-slick": "^0.30.2",
 		"react-spinners": "^0.13.8",
+		"slick-carousel": "^1.8.1",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
 		"zod": "^3.23.8"
@@ -49,6 +53,7 @@
 		"@types/nprogress": "^0.2.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.2.22",
+		"@types/react-slick": "^0.23.13",
 		"@types/redux-mock-store": "^1.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
