--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@testing-library/react": "^16.0.0",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint": "^8.56.10",
+		"@types/node": "^20.14.8",
 		"@types/nprogress": "^0.2.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.2.22",
@@ -74,7 +75,7 @@
 		"redux-mock-store": "^1.5.4",
 		"rollup": "^4.18.0",
 		"tailwindcss": "^3.4.4",
-		"typescript": "^5.2.2",
+		"typescript": "^5.5.2",
 		"vite": "^5.2.0",
 		"vitest": "^1.6.0"
 	},
