--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"react-spinners": "^0.13.8",
 		"react-top-loading-bar": "^2.3.1",
 		"slick-carousel": "^1.8.1",
+		"socket.io": "^4.7.5",
+		"socket.io-client": "^4.7.5",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
 		"zod": "^3.23.8"
