--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
 		"react-icons": "^5.2.1",
+		"react-modal": "^3.16.1",
 		"react-paginate": "^8.2.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
@@ -53,6 +54,7 @@
 		"@types/nprogress": "^0.2.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.2.22",
+		"@types/react-modal": "^3.16.3",
 		"@types/react-slick": "^0.23.13",
 		"@types/redux-mock-store": "^1.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
