--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.394.0",
 		"nprogress": "^0.2.0",
+		"rc-progress": "^4.0.0",
 		"react": "^18.2.0",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
@@ -67,7 +68,7 @@
 		"@vitest/ui": "^1.6.0",
 		"autoprefixer": "^10.4.19",
 		"axios-mock-adapter": "^1.22.0",
-		"esbuild": "^0.21.5",
+		"esbuild": "0.21.5",
 		"eslint": "^8.57.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "9.1.0",
@@ -82,7 +83,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "3.3.1",
 		"redux-mock-store": "^1.5.4",
-		"rollup": "^4.18.0",
+		"rollup": "^4.18.1",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
