feat(seller-statistics): Implement statistics on seller dashboard

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@react-oauth/google": "^0.12.1",
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.7.2",
+		"canvas": "^2.11.2",
+		"chart.js": "^4.4.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"clx": "^1.0.0",
@@ -29,6 +31,7 @@
 		"nprogress": "^0.2.0",
 		"rc-progress": "^4.0.0",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
