ch(docker image):Build a docker image #Delivers: #187919535

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"test": "vitest --coverage",
@@ -85,7 +85,6 @@
 		"postcss": "^8.4.38",
 		"prettier": "3.3.1",
 		"redux-mock-store": "^1.5.4",
-		"rollup": "^4.18.1",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
