--- a/.github/workflows/nodejs.js.yml
+++ b/.github/workflows/nodejs.js.yml
@@ -50,3 +50,36 @@ jobs:
 
       - name: coveralls
         run: npx coveralls < coverage/lcov.info
+
+  build-and-push-image:
+    needs: test
+    if: github.ref == 'refs/heads/develop'
+    env:
+      REGISTRY: docker.io
+      IMAGE_NAME: ${{ secrets.IMAGE_NAME }}
+      TAG: latest
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push docker image
+        id: push
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          push: true
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG }}
