--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"@react-oauth/google": "^0.12.1",
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.7.2",
-		"canvas": "^2.11.2",
 		"chart.js": "^4.4.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -48,6 +47,7 @@
 		"socket.io-client": "^4.7.5",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
+		"vitest-canvas-mock": "^0.3.3",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -70,6 +70,7 @@
 		"@vitest/ui": "^1.6.0",
 		"autoprefixer": "^10.4.19",
 		"axios-mock-adapter": "^1.22.0",
+		"canvas": "^2.11.2",
 		"esbuild": "0.23.0",
 		"eslint": "^8.57.0",
 		"eslint-config-airbnb-base": "^15.0.0",
@@ -85,6 +86,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "3.3.1",
 		"redux-mock-store": "^1.5.4",
+		"rollup": "^4.18.1",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
