--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"nprogress": "^0.2.0",
 		"rc-progress": "^4.0.0",
 		"react": "^18.2.0",
+		"react-apexcharts": "^1.4.1",
 		"react-chartjs-2": "^5.2.0",
 		"react-copy-to-clipboard": "^5.1.0",
 		"react-dnd": "^16.0.1",
