--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"rc-progress": "^4.0.0",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.2.0",
+		"react-copy-to-clipboard": "^5.1.0",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
@@ -60,6 +61,7 @@
 		"@types/jwt-decode": "^3.1.0",
 		"@types/nprogress": "^0.2.3",
 		"@types/react": "^18.3.3",
+		"@types/react-copy-to-clipboard": "^5.0.7",
 		"@types/react-dom": "^18.2.22",
 		"@types/react-slick": "^0.23.13",
 		"@types/redux-mock-store": "^1.0.6",
