--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@hookform/resolvers": "^3.6.0",
 		"@react-oauth/google": "^0.12.1",
 		"@reduxjs/toolkit": "^2.2.5",
+		"@types/react-copy-to-clipboard": "^5.0.7",
 		"axios": "^1.7.2",
 		"chart.js": "^4.4.3",
 		"class-variance-authority": "^0.7.0",
